--- a/Diffuz/src/pages/about/about.scss
+++ b/Diffuz/src/pages/about/about.scss
@@ -10,4 +10,15 @@ page-about {
     color: white;
   }
 
+  .customIcon {
+    color: #e53357;
+    font-size: 48px;
+  }
+
+  .customField {
+    background-color: #052942;
+    color: #fecd1a;
+  }
+
+
 }
