Ajout doc retour user et ajout background home

--- a/Diffuz/src/pages/home/home.scss
+++ b/Diffuz/src/pages/home/home.scss
@@ -1,8 +1,8 @@
 page-home {
 
   .customHomePage {
-    background-color: #052942;
-    color: white;
+    background: url("../assets/imgs/connection.jpg") no-repeat center center fixed;
+    background-size: 100% 82%;
   }
 
 
