--- a/Diffuz/src/pages/myprofil/myprofil.scss
+++ b/Diffuz/src/pages/myprofil/myprofil.scss
@@ -1,4 +1,5 @@
-page-suggestion {
+page-home {
+
   .slide1 {
     background: url("../assets/imgs/info_v2.jpg") no-repeat center center fixed;
     background-size: cover;
@@ -12,4 +13,6 @@ page-suggestion {
     -webkit-background-size: cover;
     -moz-background-size: cover;
   }
+
+
 }
