Ajout MyProfil + Sugestion

--- a/Diffuz/src/pages/connexion/connexion.scss
+++ b/Diffuz/src/pages/connexion/connexion.scss
@@ -5,6 +5,10 @@ page-connexion {
     color: white;
   }
 
+  .scroll-content{
+    overflow-y: hidden;
+  }
+
   .customButton {
     background-color: yellow;
     color: white;
