--- a/Diffuz/src/pages/suggestion/suggestion.scss
+++ b/Diffuz/src/pages/suggestion/suggestion.scss
@@ -1,13 +1,13 @@
 page-suggestion {
-  .slide1 {
-    background: url("../assets/imgs/info_v2.jpg") no-repeat center center fixed;
+  .slide3 {
+    background: url("../assets/imgs/slide1v2.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
   }
 
-  .slide2 {
-    background: url("../assets/imgs/home_v4.jpg") no-repeat center center fixed;
+  .slide4 {
+    background: url("../assets/imgs/slide2v2.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
