--- a/Diffuz/src/pages/about/about.scss
+++ b/Diffuz/src/pages/about/about.scss
@@ -1,10 +1,14 @@
 page-about {
 
   .customFormFiltre {
-    background: url("../assets/imgs/tuiles.jpg") no-repeat center fixed;
+    background: url("../assets/imgs/tuiles-v3.jpg") no-repeat center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
+  }
+
+  .scroll-content{
+    overflow-y: hidden;
   }
 
   .customIcon {
