--- a/Diffuz/src/pages/suggestion/suggestion.scss
+++ b/Diffuz/src/pages/suggestion/suggestion.scss
@@ -12,4 +12,11 @@ page-suggestion {
     -webkit-background-size: cover;
     -moz-background-size: cover;
   }
+
+  .boutonnvide {
+    width:80px;
+    height:20px;
+    background-color: transparent;
+    color: transparent;
+  }
 }
