--- a/Diffuz/src/pages/mycontact/mycontact.scss
+++ b/Diffuz/src/pages/mycontact/mycontact.scss
@@ -1,6 +1,6 @@
-page-myprofil {
+page-mycontact {
   .customMyProfil {
-    background: url("../assets/imgs/profil_v3.jpg") no-repeat center fixed;
+    background: url("../assets/imgs/selectChat.jpg") no-repeat center fixed;
     background-color: none;
     background-size: cover;
     -webkit-background-size: cover;
