--- a/Diffuz/src/pages/filter/filter.scss
+++ b/Diffuz/src/pages/filter/filter.scss
@@ -17,12 +17,26 @@ page-filter {
     background-color: #F2F1EF;
     margin-top:10px;
   }
-
+  .sizeLabel {
+    font-size:12px;
+    color:#afa99d;
+    text-decoration: none;
+  }
+  .sizeheaderlist {
+    text-transform : none;
+    color:#afa99d;
+    font-size:12px;
+  }
+  .select {
+    text-transform : none;
+    font-size:12px;
+    color:#052942;
+  }
   .customField {
     width:320px;
     background-color: #FFFFFF;
     color: #fecd1a;
-    border: 1px solid white;
+        border: 1px solid #afa99d;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
