Fin liste de suggestions

--- a/Diffuz/src/pages/suggestion/suggestion.scss
+++ b/Diffuz/src/pages/suggestion/suggestion.scss
@@ -1,2 +1,11 @@
 page-suggestion {
+
+  ion-col, ion-label, ion-item, ion-icon, ion-card-title{
+    margin:0px;
+  }
+
+  .customForm {
+    background-color: #F2F1EF;
+  }
+
 }
